--- a/style-login.css
+++ b/style-login.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    background-image: url(Sem\ título_ALTA-scale-2_00x.jpg);
+    background-image: url();
     background-repeat: no-repeat;
     background-size: contain;
     background-attachment: fixed;
